workshop7/1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  type: ClusterIP
  selector:
    app: kuard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
