workshop7/1_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kuard
spec:
  rules:
  - host: #Add host header here
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 8080
